# FODB-and-Aion-VR-Mod

./: README.md
LinuxXrPoseReader/: pose_reader  pose_reader.c
Linux_Xr_Test/: xr_test  xr_test.c
Shared/: shm_reader.cpp  shm_structs.h
docs/: comming_soon_Aion_VR_Mod.txt  comming_soon_FODB.txt
fodb-info/: Database-Engine Updates 26.06.2026  FODB_InstallInstr_And_SQL_Examples.txt
layer/: CMakeLists.txt  camera_hook.cpp  camera_hook.h  dump_callstack.cpp  dump_callstack.h  layer.cpp  layer.h  present_hook.cpp  present_hook.h  xr_bridge.cpp  xr_bridge.h
layer/build32/: CMakeCache.txt  Makefile  cmake_install.cmake
layer/util/: log.cpp  log.h  module_info.cpp  module_info.h  pattern_scan.cpp  pattern_scan.h
vr-mod-devlog/: Devlog_0  Devlog_1  Devlog_2  Devlog_3  Devlog_4  Devlog_5  Devlog_M1  Devlog_M2  littleDevlogUpdate26062026
